--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -37,28 +37,17 @@
         "Relai": "Relai",
         "Entrée numérique": "Entrée numérique",
         "Compteur": "Compteur",
-        "Extensions X800": "Extensions X800",
-        "Carte X800 1": "Carte X800 1",
-        "Carte X800 2": "Carte X800 2",
-        "Carte X800 3": "Carte X800 3",
-        "Extensions X440": "Extensions X440",
-        "Carte X440 1": "Carte X440 1",
-        "Carte X440 2": "Carte X440 2",
-        "Carte X440 3": "Carte X440 3",
-        "Mes IPX": "Mes IPX",
+        "Mes Cartes": "Mes Cartes",
         "Général": "Général",
         "Nom de l'i2cExt": "Nom de l'i2cExt",
         "Objet parent": "Objet parent",
         "Aucun": "Aucun",
         "Catégorie": "Catégorie",
         "Activer": "Activer",
-        "Configurer push": "Configurer push",
         "Accéder à la carte": "Accéder à la carte",
         "Visible": "Visible",
-        "IP de l'i2cExt": "IP de l'i2cExt",
-        "Port de l'i2cExt": "Port de l'i2cExt",
-        "Compte de l'i2cExt": "Compte de l'i2cExt",
-        "Password de l'i2cExt": "Password de l'i2cExt",
+        "Modèle de la carte": "Modèle de la carte",
+        "Adresse I2C de la carte": "Adresse I2C de la carte",
         "Indicateurs": "Indicateurs",
         "Nom": "Nom",
         "Sous-Type": "Sous-Type",
@@ -69,9 +58,6 @@
         "Sauvegarder": "Sauvegarder",
         "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
         "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>",
-        "Extensions X200ph": "Extensions X200ph",
-        "Carte X200ph 1": "Carte X200ph 1",
-        "Carte X200ph 2": "Carte X200ph 2",
         "Gestion": "Gestion",
         "Configuration": "Configuration",
         "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
@@ -90,11 +76,8 @@
         "Correction Min Auto": "Correction Min Auto",
         "Correction Max Auto": "Correction Max Auto",
         "Tester": "Tester",
-        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
-        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
-        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
     },
     "plugins\/i2cExt\/plugin_info\/info.json": {
-        "Nécessite firmware 3.05.42 minimum": "Nécessite firmware 3.05.42 minimum"
+        "Nécessite une carte d'extension avec I2C": "Nécessite une carte d'extension avec I2C"
     }
 }
