--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -1,7 +1,7 @@
 {
     "plugins\/i2cExt\/desktop\/php\/i2cExt_bouton.php": {
         "Général": "Général",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Nom de l'entrée": "Nom de l'entrée",
         "Objet parent": "Objet parent",
         "Aucun": "Aucun",
         "Catégorie": "Catégorie",
@@ -17,7 +17,7 @@
     },
     "plugins\/i2cExt\/desktop\/php\/i2cExt_relai.php": {
         "Général": "Général",
-        "Nom du relai": "Nom du relai",
+        "Nom de la sortie": "Nom de la sortie",
         "Objet parent": "Objet parent",
         "Aucun": "Aucun",
         "Catégorie": "Catégorie",
@@ -33,10 +33,8 @@
     },
     "plugins\/i2cExt\/desktop\/php\/i2cExt.php": {
         "Ajouter une i2cExt": "Ajouter une i2cExt",
-        "Entrée analogique": "Entrée analogique",
         "Relai": "Relai",
-        "Entrée numérique": "Entrée numérique",
-        "Compteur": "Compteur",
+        "Entrée": "Entrée",
         "Mes Cartes": "Mes Cartes",
         "Général": "Général",
         "Nom de l'i2cExt": "Nom de l'i2cExt",
